--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<swagger.version>2.8.0</swagger.version>
 	</properties>
 
   <dependencies>
@@ -44,5 +45,16 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!-- swagger -->
+	<dependency>
+		<groupId>io.springfox</groupId>
+		<artifactId>springfox-swagger2</artifactId>
+		<version>${swagger.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>io.springfox</groupId>
+		<artifactId>springfox-swagger-ui</artifactId>
+		<version>${swagger.version}</version>
+	</dependency>
   </dependencies>
 </project>
